# docs/swagger.json
@@ -126,6 +126,29 @@
                 }
             }
         },
+        "/public/product/{domain}": {
+            "get": {
+                "description": "show List of Product Public",
+                "tags": [
+                    "Data Product"
+                ],
+                "summary": "Get List Product Public",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/public/social-media/{subdomain}/{referral}": {
             "get": {
                 "description": "show list of Public Social Media",
